Moved bootstrap to content dir so hopefully AppHb finds it. Now showing stack traces on error page too cos I can't figure out AppHB logs :[

--- a/src/FundamentalsAggregator.Mvc/Views/Shared/Error.cshtml
+++ b/src/FundamentalsAggregator.Mvc/Views/Shared/Error.cshtml
@@ -4,6 +4,10 @@
     ViewBag.Title = "Error";
 }
 
-<h2>
-    Sorry, an error occurred while processing your request.
-</h2>
+<div class="span12">
+    <h2>Sorry, an error occurred while processing your request.</h2>
+
+    <pre>
+        @Model.Exception.ToString()
+    </pre>
+</div>
