Disabled Google Finance Summary cos I can't get it to strictly follow exchanges. Also added Long Name (not populated yet).

--- a/src/FundamentalsAggregator.Mvc/Views/Home/Fundamentals.cshtml
+++ b/src/FundamentalsAggregator.Mvc/Views/Home/Fundamentals.cshtml
@@ -20,6 +20,12 @@
 
     <div class="row fundamentals-header">
         <h1>@Model.Symbol</h1>
+
+        @if (@Model.HasLongName)
+        {
+            <h4>@Model.LongName</h4>
+        }
+
     </div>
 
     @foreach (var p in @Model.Providers)
