--- a/src/FundamentalsAggregator.Mvc/Views/Shared/_Layout.cshtml
+++ b/src/FundamentalsAggregator.Mvc/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
         table.fundamentals-data tr th { width: 80%; }
         table.fundamentals-data tr td { width: 20%; text-align: right; }
         div.fundamentals-header { margin-top: 30px; }
-        
+        td.highlighted, th.highlighted { color: #d14; /* bootstrap pink */ }
     </style>
 </head>
 <body>
